<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#f1efef">
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.liz.albunmusic.Main2Activity"
    android:background="#E3F2FD">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_list_music">

    </FrameLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        >

        <LinearLayout
            android:layout_margin="6dp"
            android:id="@+id/foto3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#BDBDBD">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_estranged"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_song4"
                    android:layout_margin="3dp"
                    android:drawableRight="@drawable/ic_more_vert"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grupo"
                    android:layout_margin="3dp"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <LinearLayout
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="#BDBDBD">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_patince" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_song3"
                    android:layout_margin="3dp"
                    android:drawableRight="@drawable/ic_more_vert"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grupo"
                    android:layout_margin="3dp"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <LinearLayout
            android:layout_margin="6dp"
            android:id="@+id/foto2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BDBDBD"
            android:gravity="center">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:src="@drawable/bg_cloud"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_song2"
                    android:layout_margin="3dp"
                    android:drawableRight="@drawable/ic_more_vert"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grupo"
                    android:layout_margin="3dp"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FFEBEE">

        <LinearLayout
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="#BDBDBD">
            <ImageView
                android:id="@+id/dont_cry2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:src="@drawable/bg_dont_cry" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_song"
                    android:layout_margin="3dp"
                    android:drawableRight="@drawable/ic_more_vert"
                    android:gravity="left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grupo"
                    android:layout_margin="3dp"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <include layout="@layout/barra_activity"/>
    </LinearLayout>
</ScrollView>